<resources>
    <string name="app_name" translatable="false">Depicture</string>

    <!-- Settings -->

    <!-- Headers-->
    <string name="pref_header_general">General</string>

    <!-- Titles -->
    <string name="pref_general_title">General</string>
    <string name="pref_about_title">About Depicture</string>

    <!-- Views -->
    <string name="about_textview">About Depicture</string>
    <string-array name="about_text_list">
        <item>Version: DEVELOPMENT</item>
        <item>License Type: GNU General Public License 3</item>
        <item>Copyright: </item>
        <item>Developer: Jonas Müller</item>
    </string-array>
    <string name="title_activity_main" translatable="false">Depicture</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="new_game_btn">New Game</string>
    <string name="join">Join</string>
    <string name="Depicture" translatable="false">Depicture</string>
    <string name="title_activity_settings">Settings</string>
    <string name="offline_string">Offline</string>
    <string name="login_reminder">Log in to use online functionalities</string>
    <string name="home_item">Home</string>
    <string name="log_in_item">Log in</string>
    <string name="logout_item">Log out</string>
    <string name="title_activity_scribbler" translatable="false">Scribbler</string>
    <string name="title_activity_draw">Draw</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_name">Invalid username</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_login">Log In</string>

    <string name="confirmation_question">Are you sure?</string>
    <string name="title_activity_lobby">Lobby</string>
    <string name="form_lobby_id_hint">Lobby ID</string>
    <string name="message_default">Message</string>
    <string name="ID_default">ID</string>
    <string name="draw_btn">Draw</string>
    <string name="default_confirm_question">Are you sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="start_game">Start Game</string>
    <string name="game_started">The game is afoot!   Draw:</string>
    <string name="default_word">Word</string>
    <string name="_5" translatable="false">5</string>
    <string name="enter_a_fitting_description">Enter a fitting description</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="wait_message">Waiting for other players…</string>
    <string name="filler_string" translatable="false">     </string>
    <string name="next_round">Next Round</string>
    <string name="start_lobby_error">Couldn\'t start lobby</string>
    <string name="waiting_for_owner">Waiting for lobby owner</string>
    <string name="next_round_error">Couldn\'t start next round</string>
    <string name="create">Create</string>
    <string name="wordlist_id">WordList ID</string>
    <string name="exit_image">Exit image</string>
    <string name="or">or</string>
    <string name="choose_default_word_list">Choose a default Word list</string>
    <string name="enter_custom_word_list_id">enter a custom WordList ID</string>
    <string name="width">Width</string>
    <string name="set">Set</string>
    <string name="set_brush_width">Set brush width</string>

    <string-array name="default_wordLists">
        <item>Default(English)</item>
        <item>Default(German)</item>
    </string-array>
</resources>
