<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/join_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.muellersites.depicture.MainActivity"
    android:background="@color/colorPrimary">

    <Button
        android:id="@+id/yes_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorAccentDark"
        android:text="@string/yes"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_question"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="25dp"
        app:layout_constraintRight_toLeftOf="@+id/no_button"
        android:layout_marginRight="50dp"
        app:layout_constraintHorizontal_bias="0.506" />

    <Button
        android:id="@+id/no_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorAccentDark"
        android:text="@string/no"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_question"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="25dp" />

    <TextView
        android:id="@+id/confirm_question"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/default_confirm_question"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/textColorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

</android.support.constraint.ConstraintLayout>